# pomodoro

./: .clang-tidy  .clangd  CMakeLists.txt  Cargo.toml  README.md  pomodoro.sh  pyproject.toml
.github/workflows/: rust.yml
include/: notification.h
pomodoro/: README.md  main.py
src/: dbus.rs  icon.rs  main.cpp  main.rs  notification.cpp  notification.rs  pomodoro.rs
