[tool.poetry]
name = "pomodoro"
version = "0.1.0"
description = "Simple script to manage pomodoro timers"
authors = ["Jakub Latusek <jk.latusek@gmail.com>"]
license = "GPL3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
